TSVPORTAL-9752 - Initial controllers and services

--- a/app/index.html
+++ b/app/index.html
@@ -369,6 +369,14 @@
 <script src="scripts/services/menu-assignment-service.js"></script>
 <script src="scripts/services/menu-rules-service.js"></script>
 <script src="scripts/directives/convert-to-number.js"></script>
+<script src="scripts/controllers/survey-choices-list.js"></script>
+<script src="scripts/controllers/survey-choices-create.js"></script>
+<script src="scripts/controllers/survey-questions-list.js"></script>
+<script src="scripts/controllers/survey-questions-create.js"></script>
+<script src="scripts/services/survey-questions-factory.js"></script>
+<script src="scripts/services/survey-questions-service.js"></script>
+<script src="scripts/services/survey-choices-factory.js"></script>
+<script src="scripts/services/survey-choices-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
