--- a/app/index.html
+++ b/app/index.html
@@ -369,6 +369,9 @@
 <script src="scripts/services/menu-assignment-service.js"></script>
 <script src="scripts/services/menu-rules-service.js"></script>
 <script src="scripts/directives/convert-to-number.js"></script>
+<script src="scripts/controllers/survey.js"></script>
+<script src="scripts/services/survey-factory.js"></script>
+<script src="scripts/services/survey-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
