--- a/app/index.html
+++ b/app/index.html
@@ -372,6 +372,7 @@
 <script src="scripts/controllers/survey.js"></script>
 <script src="scripts/services/survey-factory.js"></script>
 <script src="scripts/services/survey-service.js"></script>
+<script src="scripts/controllers/survey-create.js"></script>
 <!-- endbuild -->
 </body>
 </html>
