--- a/app/index.html
+++ b/app/index.html
@@ -373,6 +373,9 @@
 <script src="scripts/services/survey-factory.js"></script>
 <script src="scripts/services/survey-service.js"></script>
 <script src="scripts/controllers/survey-create.js"></script>
+<script src="scripts/controllers/survey-catalog.js"></script>
+<script src="scripts/services/survey-catalog-factory.js"></script>
+<script src="scripts/services/survey-catalog-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
