--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css" />
   <link rel="stylesheet" href="bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css" />
   <link rel="stylesheet" href="bower_components/ngtoast/dist/ngToast.css" />
+  <link rel="stylesheet" href="bower_components/select2/select2.css" />
   <link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" />
   <link rel="stylesheet" href="bower_components/angular-timezone-selector/dist/angular-timezone-selector.css" />
   <!-- endbower -->
@@ -77,7 +78,7 @@
 <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/ngtoast/dist/ngToast.js"></script>
-<script src="bower_components/select2/dist/js/select2.js"></script>
+<script src="bower_components/select2/select2.js"></script>
 <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
 <script src="bower_components/angular-bootstrap-switch/dist/angular-bootstrap-switch.js"></script>
 <script src="bower_components/ngstorage/ngStorage.js"></script>
