--- a/app/index.html
+++ b/app/index.html
@@ -377,6 +377,7 @@
 <script src="scripts/services/survey-factory.js"></script>
 <script src="scripts/services/survey-service.js"></script>
 <script src="scripts/controllers/survey-create.js"></script>
+<script src="scripts/controllers/survey-catalog-create.js"></script>
 <script src="scripts/controllers/survey-catalog.js"></script>
 <script src="scripts/services/survey-catalog-factory.js"></script>
 <script src="scripts/services/survey-catalog-service.js"></script>
