TSVPORTAL-231 | Epos Config Screen initial draft

--- a/app/index.html
+++ b/app/index.html
@@ -375,6 +375,9 @@
 <script src="scripts/services/menu-rules-factory.js"></script>
 <script src="scripts/controllers/menu-rule-create.js"></script>
 <script src="scripts/services/cabin-classes-service.js"></script>
+<script src="scripts/controllers/epos-config.js"></script>
+<script src="scripts/services/epos-config-factory.js"></script>
+<script src="scripts/services/epos-config-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
