--- a/app/index.html
+++ b/app/index.html
@@ -393,6 +393,11 @@
 <script src="scripts/controllers/survey-catalog.js"></script>
 <script src="scripts/services/survey-catalog-factory.js"></script>
 <script src="scripts/services/survey-catalog-service.js"></script>
+<script src="scripts/services/image-logo-service.js"></script>
+<script src="scripts/controllers/survey-questions-list.js"></script>
+<script src="scripts/controllers/survey-questions-create.js"></script>
+<script src="scripts/services/survey-questions-factory.js"></script>
+<script src="scripts/services/survey-questions-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
