--- a/app/index.html
+++ b/app/index.html
@@ -390,6 +390,7 @@
 <script src="scripts/controllers/survey-questions-create.js"></script>
 <script src="scripts/services/survey-questions-factory.js"></script>
 <script src="scripts/services/survey-questions-service.js"></script>
+<script src="scripts/controllers/report-exchange-rate.js"></script>
 <!-- endbuild -->
 </body>
 </html>
