TSVPORTAL-10755: added contoller to index.html

--- a/app/index.html
+++ b/app/index.html
@@ -281,6 +281,7 @@
 <script src="scripts/controllers/forgot-username-password.js"></script>
 <script src="scripts/controllers/reconciliation-discrepancy-detail.js"></script>
 <script src="scripts/controllers/reconciliation-dashboard.js"></script>
+<script src="scripts/controllers/reconciliation-cash-bag-list.js"></script>
 <script src="scripts/services/reconciliation-factory.js"></script>
 <script src="scripts/directives/top-navigation-bar.js"></script>
 <script src="scripts/services/identity-access-service.js"></script>
