--- a/app/index.html
+++ b/app/index.html
@@ -255,6 +255,7 @@
 <script src="scripts/controllers/store-instance-seals.js"></script>
 <script src="scripts/services/store-instance-review-factory.js"></script>
 <script src="scripts/services/store-instance-assign-seals-factory.js"></script>
+<script src="scripts/services/access-service.js"></script>
 <script src="scripts/directives/seal-type.js"></script>
 <script src="scripts/services/store-instance-dashboard-factory.js"></script>
 <script src="scripts/controllers/store-instance-dashboard.js"></script>
