TSVPORTAL-10859 - Working on list search part

--- a/app/index.html
+++ b/app/index.html
@@ -393,6 +393,7 @@
 <script src="scripts/services/survey-questions-factory.js"></script>
 <script src="scripts/services/survey-questions-service.js"></script>
 <script src="scripts/controllers/report-exchange-rate.js"></script>
+<script src="scripts/services/stations-factory.js"></script>
 <!-- endbuild -->
 </body>
 </html>
