--- a/app/index.html
+++ b/app/index.html
@@ -397,6 +397,8 @@
 <script src="scripts/services/epos-config-factory.js"></script>
 <script src="scripts/services/epos-config-service.js"></script>
 <script src="scripts/controllers/report-exchange-rate.js"></script>
+<script src="scripts/directives/epos-config-modules.js"></script>
+<script src="scripts/directives/epos-config-single-module.js"></script>
 <!-- endbuild -->
 </body>
 </html>
