--- a/app/index.html
+++ b/app/index.html
@@ -401,6 +401,7 @@
 <script src="scripts/directives/epos-config-modules.js"></script>
 <script src="scripts/directives/epos-config-single-module.js"></script>
 <script src="scripts/services/stations-factory.js"></script>
+<script src="scripts/services/back-office-config-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
