--- a/app/index.html
+++ b/app/index.html
@@ -272,6 +272,7 @@
 <script src="scripts/services/discount-factory.js"></script>
 <script src="scripts/services/discount-types-service.js"></script>
 <script src="scripts/services/feature-thresholds-service.js"></script>
+<script src="scripts/services/feature-thresholds-factory.js"></script>
 <script src="scripts/controllers/currency-edit.js"></script>
 <script src="scripts/services/payload-utility.js"></script>
 <script src="scripts/controllers/company-exchange-rate-edit.js"></script>
