--- a/app/index.html
+++ b/app/index.html
@@ -391,6 +391,8 @@
 <script src="scripts/controllers/survey-catalog.js"></script>
 <script src="scripts/services/survey-catalog-factory.js"></script>
 <script src="scripts/services/survey-catalog-service.js"></script>
+<script src="scripts/controllers/company-reasoncodes-list.js"></script>
+<script src="scripts/services/company-reasoncodes-service.js"></script>
 <script src="scripts/services/image-logo-service.js"></script>
 <script src="scripts/controllers/survey-questions-list.js"></script>
 <script src="scripts/controllers/survey-questions-create.js"></script>
