TSVPORTAL-11197 | Update factory

--- a/app/index.html
+++ b/app/index.html
@@ -393,6 +393,7 @@
 <script src="scripts/services/survey-catalog-service.js"></script>
 <script src="scripts/controllers/company-reasoncodes-list.js"></script>
 <script src="scripts/services/company-reasoncodes-service.js"></script>
+<script src="scripts/services/company-reasoncodes-factory.js"></script>
 <script src="scripts/services/image-logo-service.js"></script>
 <script src="scripts/controllers/survey-questions-list.js"></script>
 <script src="scripts/controllers/survey-questions-create.js"></script>
