TSVPORTAL-11319 - Starting to work on views

--- a/app/index.html
+++ b/app/index.html
@@ -412,6 +412,8 @@
 <script src="scripts/services/priceupdater-factory.js"></script>
 <script src="scripts/services/priceupdater-service.js"></script>
 <script src="scripts/services/back-office-config-service.js"></script>
+<script src="scripts/controllers/company-receipt-list.js"></script>
+<script src="scripts/controllers/company-receipt-create.js"></script>
 <!-- endbuild -->
 </body>
 </html>
