--- a/app/index.html
+++ b/app/index.html
@@ -414,6 +414,8 @@
 <script src="scripts/services/back-office-config-service.js"></script>
 <script src="scripts/controllers/company-receipt-list.js"></script>
 <script src="scripts/controllers/company-receipt-create.js"></script>
+<script src="scripts/controllers/company-receipt-email-list.js"></script>
+<script src="scripts/controllers/company-receipt-email-create.js"></script>
 <!-- endbuild -->
 </body>
 </html>
