--- a/app/index.html
+++ b/app/index.html
@@ -416,6 +416,8 @@
 <script src="scripts/controllers/company-receipt-create.js"></script>
 <script src="scripts/controllers/company-receipt-email-list.js"></script>
 <script src="scripts/controllers/company-receipt-email-create.js"></script>
+<script src="scripts/services/company-receipt-factory.js"></script>
+<script src="scripts/services/company-receipt-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
