--- a/app/index.html
+++ b/app/index.html
@@ -418,6 +418,7 @@
 <script src="scripts/controllers/company-receipt-email-create.js"></script>
 <script src="scripts/services/company-receipt-factory.js"></script>
 <script src="scripts/services/company-receipt-service.js"></script>
+<script src="scripts/services/company-receipt-email-factory.js"></script>
 <!-- endbuild -->
 </body>
 </html>
