--- a/app/index.html
+++ b/app/index.html
@@ -419,6 +419,7 @@
 <script src="scripts/services/company-receipt-factory.js"></script>
 <script src="scripts/services/company-receipt-service.js"></script>
 <script src="scripts/services/company-receipt-email-factory.js"></script>
+<script src="scripts/services/company-receipt-email-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
