--- a/app/index.html
+++ b/app/index.html
@@ -420,6 +420,8 @@
 <script src="scripts/services/company-receipt-service.js"></script>
 <script src="scripts/services/company-receipt-email-factory.js"></script>
 <script src="scripts/services/company-receipt-email-service.js"></script>
+<script src="scripts/services/company-email-receipt-factory.js"></script>
+<script src="scripts/services/company-email-receipt-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
