TSVPORTAL-11471 - Create route tax factory

--- a/app/index.html
+++ b/app/index.html
@@ -420,6 +420,8 @@
 <script src="scripts/services/company-email-receipt-service.js"></script>
 <script src="scripts/controllers/company-email-receipt-list.js"></script>
 <script src="scripts/controllers/company-email-receipt-create.js"></script>
+<script src="scripts/services/route-tax-rates-factory.js"></script>
+<script src="scripts/services/route-tax-rates-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
