--- a/app/index.html
+++ b/app/index.html
@@ -422,6 +422,7 @@
 <script src="scripts/controllers/company-email-receipt-create.js"></script>
 <script src="scripts/services/route-tax-rates-factory.js"></script>
 <script src="scripts/services/route-tax-rates-service.js"></script>
+<script src="scripts/controllers/route-tax-rates.js"></script>
 <!-- endbuild -->
 </body>
 </html>
