--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
 <script src="bower_components/angular-dragdrop/draganddrop.js"></script>
-<script src="bower_components/angular-filter/dist/angular-filter.js"></script>
+<script src="bower_components/angular-filter/dist/angular-filter.min.js"></script>
 <script src="bower_components/angular-messages/angular-messages.js"></script>
 <script src="bower_components/qrcode/lib/qrcode.js"></script>
 <script src="bower_components/angular-qr/src/angular-qr.js"></script>
