--- a/app/index.html
+++ b/app/index.html
@@ -421,6 +421,7 @@
 <script src="scripts/services/route-tax-rates-factory.js"></script>
 <script src="scripts/services/route-tax-rates-service.js"></script>
 <script src="scripts/controllers/route-tax-rates.js"></script>
+<script src="scripts/services/main-menu-order-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
