--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/angular-cookies/angular-cookies.js"></script>
 <script src="bower_components/angular-dragdrop/draganddrop.js"></script>
-<script src="bower_components/angular-filter/dist/angular-filter.js"></script>
+<script src="bower_components/angular-filter/dist/angular-filter.min.js"></script>
 <script src="bower_components/angular-messages/angular-messages.js"></script>
 <script src="bower_components/qrcode/lib/qrcode.js"></script>
 <script src="bower_components/angular-qr/src/angular-qr.js"></script>
@@ -421,7 +421,6 @@
 <script src="scripts/services/route-tax-rates-factory.js"></script>
 <script src="scripts/services/route-tax-rates-service.js"></script>
 <script src="scripts/controllers/route-tax-rates.js"></script>
-<script src="scripts/services/main-menu-order-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
