--- a/app/index.html
+++ b/app/index.html
@@ -422,6 +422,9 @@
 <script src="scripts/services/route-tax-rates-service.js"></script>
 <script src="scripts/controllers/route-tax-rates.js"></script>
 <script src="scripts/services/main-menu-order-service.js"></script>
+<script src="scripts/services/user-management-factory.js"></script>
+<script src="scripts/services/user-management-service.js"></script>
+<script src="scripts/controllers/user-management-list.js"></script>
 <!-- endbuild -->
 </body>
 </html>
