--- a/app/index.html
+++ b/app/index.html
@@ -425,6 +425,7 @@
 <script src="scripts/services/user-management-factory.js"></script>
 <script src="scripts/services/user-management-service.js"></script>
 <script src="scripts/controllers/user-management-list.js"></script>
+<script src="scripts/controllers/user-create.js"></script>
 <!-- endbuild -->
 </body>
 </html>
