TSVPORTAL-11797 | Packing plan create operation templates.

--- a/app/index.html
+++ b/app/index.html
@@ -410,6 +410,7 @@
 <script src="scripts/services/priceupdater-factory.js"></script>
 <script src="scripts/services/priceupdater-service.js"></script>
 <script src="scripts/controllers/packingplan-list.js"></script>
+<script src="scripts/controllers/packingplan-create.js"></script>
 <script src="scripts/services/packingplan-factory.js"></script>
 <script src="scripts/services/packingplan-service.js"></script>
 <script src="scripts/services/back-office-config-service.js"></script>
