TSVPORTAL-11835 - Added new utility service

--- a/app/index.html
+++ b/app/index.html
@@ -426,6 +426,7 @@
 <script src="scripts/services/user-management-service.js"></script>
 <script src="scripts/controllers/user-management-list.js"></script>
 <script src="scripts/controllers/user-create.js"></script>
+<script src="scripts/services/form-validation-utility.js"></script>
 <!-- endbuild -->
 </body>
 </html>
