TSVPORTAL-522 - Start work

--- a/app/index.html
+++ b/app/index.html
@@ -431,6 +431,14 @@
 <script src="scripts/controllers/user-management-list.js"></script>
 <script src="scripts/controllers/user-create.js"></script>
 <script src="scripts/services/form-validation-utility.js"></script>
+<script src="scripts/controllers/sales-targets-list.js"></script>
+<script src="scripts/controllers/sales-targets-categories-list.js"></script>
+<script src="scripts/services/sales-target-category-factory.js"></script>
+<script src="scripts/services/sales-target-category-service.js"></script>
+<script src="scripts/controllers/sales-targets-categories.js"></script>
+<script src="scripts/services/sales-target-factory.js"></script>
+<script src="scripts/services/sales-target-service.js"></script>
+<script src="scripts/controllers/sales-targets.js"></script>
 <!-- endbuild -->
 </body>
 </html>
