--- a/app/index.html
+++ b/app/index.html
@@ -439,6 +439,7 @@
 <script src="scripts/services/sales-target-factory.js"></script>
 <script src="scripts/services/sales-target-service.js"></script>
 <script src="scripts/controllers/sales-targets.js"></script>
+<script src="scripts/controllers/pre-order.js"></script>
 <!-- endbuild -->
 </body>
 </html>
