TS5PORTAL-625 | Print Button

--- a/app/transactions/epos-sales-receipts.html
+++ b/app/transactions/epos-sales-receipts.html
@@ -225,7 +225,7 @@ function onPageStatus(){
 }
 
 function generatePDF(){
-	$('#pdfButton').hide();
+	//$('#pdfButton').hide();
 	setTimeout(function(){ window.print(); }, 2000);
 }
 
