TS5PORTAL-625 | removed timeout

--- a/app/transactions/epos-sales-receipts.html
+++ b/app/transactions/epos-sales-receipts.html
@@ -226,7 +226,8 @@ function onPageStatus(){
 
 function generatePDF(){
 	//$('#pdfButton').hide();
-	setTimeout(function(){ window.print(); }, 2000);
+	//setTimeout(function(){ window.print(); }, 2000);
+	window.print();
 }
 
 </script>
