TS5PORTAL-585 - Started to work on search inputs

--- a/app/index.html
+++ b/app/index.html
@@ -440,6 +440,7 @@
 <script src="scripts/services/sales-target-service.js"></script>
 <script src="scripts/controllers/sales-targets.js"></script>
 <script src="scripts/controllers/pre-order.js"></script>
+<script src="scripts/controllers/pre-order-list.js"></script>
 <!-- endbuild -->
 </body>
 </html>
