TS5PORTAL-585 - Integrating with backend api

--- a/app/index.html
+++ b/app/index.html
@@ -441,6 +441,8 @@
 <script src="scripts/controllers/sales-targets.js"></script>
 <script src="scripts/controllers/pre-order.js"></script>
 <script src="scripts/controllers/pre-order-list.js"></script>
+<script src="scripts/services/pre-orders-factory.js"></script>
+<script src="scripts/services/pre-orders-service.js"></script>
 <!-- endbuild -->
 </body>
 </html>
