TS5PORTAL-916 | Store Instance Id update

--- a/app/transactions/epos-sales-receipts.html
+++ b/app/transactions/epos-sales-receipts.html
@@ -144,7 +144,7 @@ $(function () {
 		  tableOfContent += '<tr><td>For Date Range &nbsp&nbsp </td><td> From&nbsp&nbsp'+getParameterByName("startDate")+' To&nbsp&nbsp '+getParameterByName("endDate")+'</td></tr>';
 		  tableOfContent += '<tr><td>For Transaction ID &nbsp&nbsp </td><td>&nbsp&nbsp'+(getParameterByName("transactionId") === '' ? '' : getParameterByName("transactionId"))+'</td></tr>';
 		  tableOfContent += '<tr><td>For Flight Number &nbsp&nbsp </td><td>&nbsp&nbsp'+(getParameterByName("scheduleNumber") === '' ? '' : getParameterByName("scheduleNumber"))+'</td></tr>';
-		  tableOfContent += '<tr><td>For Barset Number &nbsp&nbsp </td><td>&nbsp&nbsp'+(getParameterByName("storeInstanceId") === '' ? '' : getParameterByName("storeInstanceId"))+'</td></tr>';
+		  tableOfContent += '<tr><td>For Store Instance ID &nbsp&nbsp </td><td>&nbsp&nbsp'+(getParameterByName("storeInstanceId") === '' ? '' : getParameterByName("storeInstanceId"))+'</td></tr>';
 		  tableOfContent += '<tr><td>For Store Number &nbsp&nbsp </td><td>&nbsp&nbsp'+(getParameterByName("storeNumber") === '' ? '' : getParameterByName("storeNumber"))+'</td></tr>';
 		  tableOfContent += '</tbody></table>';
 	
