--- a/app/transactions/epos-sales-receipts.html
+++ b/app/transactions/epos-sales-receipts.html
@@ -182,6 +182,7 @@ $(function () {
 		  tableOfContent += '<tr><td>For Transaction ID &nbsp&nbsp </td><td>&nbsp&nbsp'+(getParameterByName("paymentId") === '' ? '' : getParameterByName("paymentId"))+'</td></tr>';
 		  tableOfContent += '<tr><td>For Flight Number &nbsp&nbsp </td><td>&nbsp&nbsp'+(getParameterByName("scheduleNumber") === '' ? '' : getParameterByName("scheduleNumber"))+'</td></tr>';
 		  tableOfContent += '<tr><td>For Store Number &nbsp&nbsp </td><td>&nbsp&nbsp'+(getParameterByName("storeNumber") === '' ? '' : getParameterByName("storeNumber"))+'</td></tr>';
+		  tableOfContent += '<tr><td>For Device / MAC ID &nbsp&nbsp </td><td>&nbsp&nbsp'+(getParameterByName("deviceId") === '' ? '' : getParameterByName("deviceId"))+'</td></tr>';
 		  tableOfContent += '</tbody></table>';
 	
     $("#receipt-header").append(tableOfContent);
@@ -207,13 +208,13 @@ $(function () {
 												  +'<div id=signature-'+index+'-'+transactionId+ ' style=\"border:1px; border-style:solid; width: 570px;\"></div></div></section><br></div>');
 		    $.ajax({
 			   type: 'GET',
-			   url: 'https://w6-ts5-qa.egatesoln.com/rsvr-email/caa/sales-receipt-template/'+transactionId,
+			   url: '/rsvr-email/caa/sales-receipt-template/'+transactionId,
 			   async: false,
 			   success: function(data){
 			      $("#receiptId-"+index+"-"+transactionId).append(data);
 			      $.ajax({
 					   type: 'GET',
-					   url: 'https://w6-ts5-qa.egatesoln.com/rsvr-email/caa/data/'+transactionId,
+					   url: '/rsvr-email/caa/data/'+transactionId,
 					   async: false,
 					   success: function(data){
 						    var cart = {};
