TS5PORTAL-625 | Added new page to avoid conflict in transaction screen

--- a/app/index.html
+++ b/app/index.html
@@ -439,6 +439,7 @@
 <script src="scripts/services/sales-target-factory.js"></script>
 <script src="scripts/services/sales-target-service.js"></script>
 <script src="scripts/controllers/sales-targets.js"></script>
+<script src="scripts/controllers/epos-transaction-sales-receipts.js"></script>
 <!-- endbuild -->
 </body>
 </html>
