--- a/app/index.html
+++ b/app/index.html
@@ -159,6 +159,7 @@
 <script src="scripts/directives/input-tax-type.js"></script>
 <script src="scripts/directives/leave-view-modal.js"></script>
 <script src="scripts/directives/input-station-exception.js"></script>
+<script src="scripts/directives/input-country-exception.js"></script>
 <script src="scripts/services/menu-service.js"></script>
 <script src="scripts/services/currencies-service.js"></script>
 <script src="scripts/directives/loading-modal.js"></script>
